force-app/main/default/objects/Opportunity/fields/Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration__c</fullName>
    <label>Deal Registration</label>
    <description>Lookup to the originating Deal Registration that created this Opportunity.</description>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>