force-app/main/default/objects/Opportunity/fields/Linked_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Linked_Deal_Registration__c</fullName>
    <label>Linked Deal Registration</label>
    <description>The source Deal Registration that created this Opportunity</description>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Linked Opportunities</relationshipLabel>
    <relationshipName>Linked_Opportunities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>