force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <description>Primary contact for this Opportunity. Populated from the Deal Registration Primary Partner Contact field during synchronization.</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
    <relationshipName>Opportunities_Primary_Contact</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>